<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_statistics" />

    <EditText
        android:id="@+id/login_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rectangle"
        android:hint="@string/login"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rectangle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/login_field"
        app:layout_constraintStart_toStartOf="@+id/login_field"
        app:layout_constraintTop_toBottomOf="@+id/login_field" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>